# fabric-o-matic

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
.github/: FUNDING.yml
addon/: __init__.py  menu.py  operators.py  samples.py  templates.py  utils.py
addon/nodes/: base.py  utils.py  weaving.py
addon/shaders/: bezier2.osl
demo/: untitled.blend
dev/: dev.blend  edge.blend  fibers.blend  render_previews.py  test.blend
dev/docs/: conf.py  index.rst  utils.rst  weaving.rst
dev/tweaks/: coarsing.blend  dyeing.blend  edges.blend  template.blend
docs/: index.html  objects.inv  search.html  searchindex.js  utils.html  weaving.html
docs/_sources/: utils.rst.txt  weaving.rst.txt
docs/_static/: documentation_options.js
docs/html/: index.html  objects.inv  search.html  searchindex.js  utils.html  weaving.html
research/: README.md  pipes.py  splines.ipynb  splines.py  vectors.py
